anv: vkQueueSubmit with waitSemaphore value of 0 hangs CPU
Apparently, waiting for a timeline semaphore value of 0 (where 0 is initialValue) never completes on ANV and vkQueueWaitIdle after such a submit hangs.
Apparently, waiting for a timeline semaphore value of 0 (where 0 is initialValue) never completes on ANV and vkQueueWaitIdle after such a submit hangs.