src/intel/vulkan/anv_queue.c
@@ -997,18 +997,24 @@ anv_queue_submit_add_in_semaphores(struct anv_queue_submit *submit,
       }
 
       case ANV_SEMAPHORE_TYPE_TIMELINE:
+         assert(in_values);
+         if (in_values[i] == 0)
+            break;
          result = anv_queue_submit_add_timeline_wait(submit, device,
                                                      &impl->timeline,
-                                                     in_values ? in_values[i] : 0);
+                                                     in_values[i]);
          if (result != VK_SUCCESS)
             return result;
          break;
 
       case ANV_SEMAPHORE_TYPE_DRM_SYNCOBJ_TIMELINE:
+         assert(in_values);
+         if (in_values[i] == 0)
+            break;
          result = anv_queue_submit_add_syncobj(submit, device,
                                                impl->syncobj,
                                                I915_EXEC_FENCE_WAIT,
-                                               in_values ? in_values[i] : 0);
+                                               in_values[i]);
          if (result != VK_SUCCESS)
             return result;
          break;
@@ -1074,17 +1080,23 @@ anv_queue_submit_add_out_semaphores(struct anv_queue_submit *submit,
       }
 
       case ANV_SEMAPHORE_TYPE_TIMELINE:
+         assert(out_values);
+         if (out_values[i] == 0)
+            break;
          result = anv_queue_submit_add_timeline_signal(submit, device,
                                                        &impl->timeline,
-                                                       out_values ? out_values[i] : 0);
+                                                       out_values[i]);
          if (result != VK_SUCCESS)
             return result;
          break;
 
       case ANV_SEMAPHORE_TYPE_DRM_SYNCOBJ_TIMELINE:
+         assert(out_values);
+         if (out_values[i] == 0)
+            break;
          result = anv_queue_submit_add_syncobj(submit, device, impl->syncobj,
                                                I915_EXEC_FENCE_SIGNAL,
-                                               out_values ? out_values[i] : 0);
+                                               out_values[i]);
          if (result != VK_SUCCESS)
             return result;
          break;
